[project]
name = "prj"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.31.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "tabpfn>=7.1.1",
]

[tool.setuptools]
packages = ["agent"]

[tool.cython]
compile_py = true
exclude = []

[build-system]
requires = ["setuptools>=70", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"agent"=["df_fs.pkl"]
